--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.15",
+    "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "eslint": "^8.23.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
@@ -29,5 +30,8 @@
     "lint-staged": "^13.0.3",
     "ts-jest": "^28.0.8",
     "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
